Fixer le probléme des collapses

--- a/Client/src/scss/_custom.scss
+++ b/Client/src/scss/_custom.scss
@@ -71,3 +71,6 @@
 .testCard{
   display:table-column
 }
+.chiHaja {
+  
+}
